fix : 싫어하는 메뉴와 이미 먹은 메뉴가 삭제되지 않는 버그 fix